# game-extension

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: test-game-extension.yml
db_sample/: armies.json  chapters.json  effects.json  inventory.json  kits.json  personalities.json  roles.json  skills.json  units.json
game_extension_macros/: Cargo.toml
game_extension_macros/src/: derive.rs  lib.rs
src/: lib.rs  pathfinding.rs  traits.rs  validator.rs
src/database/: army.rs  common.rs  godot_api.rs  kit.rs  mod.rs  personality.rs  role.rs  skill.rs  unit.rs  validation.rs
src/database/chapter/: camp.rs  dialogue.rs  mod.rs
src/database/chapter/battle/: conditions.rs  mod.rs  preparation.rs
src/database/effect/: combat_flow_modifier.rs  combat_stat_modifier.rs  growth_modifier.rs  health.rs  mod.rs  stat_modifier.rs
src/database/inventory/: entry_uses.rs  mod.rs
src/database/inventory/entry_type/: item_entry.rs  mod.rs  support_entry.rs  weapon_entry.rs
src/game_entities/: army_states.rs  index_store.rs  mod.rs  unit_states.rs
src/game_entities/unit_data/: godot_api.rs  initializers.rs  inventory.rs  mod.rs
src/save/: mod.rs
src/save/slot/: mod.rs
src/save/slot/barracks_state/: inventory.rs  mod.rs  roles.rs  units.rs
src/save/slot/game_state/: camp.rs  dialogue.rs  flags.rs  mod.rs
src/save/slot/game_state/battle/: mod.rs  preparation.rs
