[package]
name = "game_extension"
version = "0.0.1"
edition = "2024"
resolver = "3"
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "=0.2.3", features = ["serde", "api-4-3", "register-docs"] }
# Pathfinding
priority-queue = { version = "2.1" }
# Savegame/Database
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_with = { version = "3.12", features = ["std"] }
bitcode = { version = "0.6", features = ["serde"], optional = true }
# Macros
game_extension_macros = { path = "game_extension_macros" }

[features]
default = ["verify_database", "serde_json"]
verify_database = []
save_json = ["serde_json"]
save_bin = ["bitcode"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
