[package]
name = "game_extension_macros"
version = "0.0.1"
edition = "2024"
resolver = "3"
rust-version = "1.85"

[lib]
name = "rust_extensions_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
# Godot
godot = { version = "=0.2.3", features = ["api-4-3"] }
# Macro building
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "1.0", features = ["derive"] }

[profile.release]
strip = true 
lto = true
codegen-units = 1
panic = "abort"
